--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
   "main": "index.ts",
   "author": "Andre Hagen",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
+  },
+  "scripts": {
+    "lint": "eslint . --ext .ts",
+    "start": "ts-node --files ./server.ts"
+  }
 }
