--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.14.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "ts-node": "^10.7.0",
