--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "dotenv": "^16.0.1",
     "eslint": "^8.14.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "nodemon": "^2.0.18",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "start": "ts-node --files ./server.ts"
+    "start": "nodemon",
+    "build": "tsc -p ."
   }
 }
