--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "eslint": "^8.14.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "express": "^4.18.1",
+    "mongodb": "^4.8.0",
     "nodemon": "^2.0.18",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
